thay doi header

--- a/Catalog/Catalog.html
+++ b/Catalog/Catalog.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="catalog.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/footer/footer.css">
+    <link rel="stylesheet" href="../style/header/header.css">
 </head>
 <body>
 <div id="header"></div>
