Them dat lich kham

--- a/Catalog/Catalog.html
+++ b/Catalog/Catalog.html
@@ -176,6 +176,6 @@
     </div></div>
 <script src="catalog.js"></script>
 <script src="../style/footer/footer.js"></script>
-<script src="../style/header/Module_header.js"></script>
+<script src="../style/header/header.js"></script>
 </body>
 </html>
