--- a/Product_Detail/ProductDetail.html
+++ b/Product_Detail/ProductDetail.html
@@ -160,7 +160,7 @@
 </div>
 <script src="JS/inforProduct.js"></script>
 <script src="JS/view.js"></script>
-<script src="../style/header/Module_header.js"></script>
+<script src="../style/header/header.js"></script>
 <script src="JS/product_detail.js"></script>
 
 
