--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 </div> <!-- JS sẽ render vào đây -->
 <script src="Home/Category/categories.js"></script>
-<script src="style/header/Module_header.js"></script>
+<script src="style/header/header.js"></script>
 <script src="Home/Category/Category-sibar.js"></script>
 <script src="Home/Slide/silde.js"></script>
 <script src="Home/Product/productTypes.js"></script>
