Quan ly Booking.html

--- a/Product_Detail/ProductDetail.html
+++ b/Product_Detail/ProductDetail.html
@@ -160,6 +160,7 @@
     </div>
 </div>
 <script src="JS/inforProduct.js"></script>
+<script src="../style/header/header.js"></script>
 
 <script src="JS/view.js"></script>
 
