--- a/User/User_sidebar/user_sidebar.html
+++ b/User/User_sidebar/user_sidebar.html
@@ -6,23 +6,52 @@
      <link rel="stylesheet" href="user_sidebar.css">
 </head>
 <body>
-  <!-- Sidebar -->
-        <aside class="sidebar">
-            <div class="profile">
-                <div class="avatar">U</div>
-                <p class="username">User Name</p>
-            </div>
-            <ul class="menu">
-                <li><i class="fa-regular fa-user"></i> Thông tin tài khoản</li>
-                <li><i class="fa-solid fa-location-dot"></i> Địa chỉ</li>
-                <li><i class="fa-regular fa-clock"></i> Lịch sử mua hàng</li>
-                <li><i class="fa-regular fa-eye"></i> Sản phẩm đã xem</li>
-                <li><i class="fa-regular fa-star"></i> Đánh giá của tôi</li>
-                <!-- <li><i class="fa-solid fa-ticket"></i> Mã giảm giá</li>
-                <li><i class="fa-regular fa-file-lines"></i> Tra cứu bảo hành</li>
-                <li><i class="fa-solid fa-receipt"></i> Tra cứu hóa đơn</li> -->
-                <li><i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</li>
-            </ul>
-        </aside>
+<aside class="sidebar">
+    <div class="profile">
+        <div class="avatar">U</div>
+        <p class="username">User Name</p>
+    </div>
+
+    <ul class="menu">
+
+        <li>
+            <a href="../User_home/user_home.html">
+                <i class="fa-regular fa-user"></i> Thông tin tài khoản
+            </a>
+        </li>
+
+        <li>
+            <a href="../User_address/address.html">
+                <i class="fa-solid fa-location-dot"></i> Địa chỉ
+            </a>
+        </li>
+
+        <li>
+            <a href="../History/history.html">
+                <i class="fa-regular fa-clock"></i> Lịch sử mua hàng
+            </a>
+        </li>
+
+        <li>
+            <a href="../Viewed_products/viewed_products.html">
+                <i class="fa-regular fa-eye"></i> Sản phẩm đã xem
+            </a>
+        </li>
+
+        <li>
+            <a href="../Rating/my_rating.html">
+                <i class="fa-regular fa-star"></i> Đánh giá của tôi
+            </a>
+        </li>
+
+        <li>
+            <a href="../Logout/logout.html">
+                <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất
+            </a>
+        </li>
+
+    </ul>
+</aside>
+
 </body>
 </html>
