Link các trang về phần Login

--- a/Login/login.html
+++ b/Login/login.html
@@ -62,11 +62,11 @@
       <form>
         <input type="text" placeholder="Nhập số điện thoại" required>
         <input type="password" placeholder="Mật khẩu" required>
-        <a href="#" class="forgot">Quên mật khẩu?</a>
-        <button type="submit" class="btn-login">Đăng nhập</button>
+        <a href="recover_password.html" class="forgot">Quên mật khẩu?</a>
+        <button type="submit" class="btn-login"> Đăng nhập</button>
       </form>
 
-      <p>Bạn chưa có tài khoản? <a href="#">Đăng ký</a></p>
+      <p>Bạn chưa có tài khoản? <a href="register.html">Đăng ký</a></p>
 
       <div class="divider">HOẶC</div>
 
