--- a/Login/recover_password.html
+++ b/Login/recover_password.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lấy lại mật khẩu</title>
     <link rel="stylesheet" href="recover_password.css">
-    <link rel="stylesheet" href="../style/header/header" />
+    <link rel="stylesheet" href="../style/header/header.css" />
     <link rel="stylesheet" href="../style/footer/footer.css" />
 </head>
 
