Link phần add_address vào address page

--- a/User/Address/address.html
+++ b/User/Address/address.html
@@ -103,7 +103,9 @@
     <section class="content">
       <div class="content-header">
         <h2>Sổ địa chỉ</h2>
-        <button class="add-address-btn">+ Thêm địa chỉ mới</button>
+        <form action="add_address.html" method="get">
+          <button class="add-address-btn">+ Thêm địa chỉ mới</button>
+        </form>
       </div>
 
       <div class="address-box">
