--- a/Login/login.html
+++ b/Login/login.html
@@ -59,7 +59,7 @@
     <!-- Login Form -->
     <div class="login-box">
       <h2>Đăng nhập</h2>
-      <form>
+      <form action="../User/User_home/user_home.html" method="get">
         <input type="text" placeholder="Nhập số điện thoại" required>
         <input type="password" placeholder="Mật khẩu" required>
         <a href="recover_password.html" class="forgot">Quên mật khẩu?</a>
